--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         </configuration>
       </plugin>
 </plugins>
+
 </build> 
   </profile>
   
@@ -61,6 +62,19 @@
 
   <build>
 <plugins>
+<plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.13.0</version>
+          <configuration>
+              <compilerArgs>
+                  <arg>--add-exports</arg>
+                  <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+              </compilerArgs>
+              <source>1.8</source>
+              <target>1.8</target>
+          </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
